--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -8,14 +8,16 @@ body{
     font-family: sans-serif;
     font-size: 1.2rem;
     min-height: 100%;
-    background-image:"";
+    background: black;
 }
 
 /*estilo header*/
 .nav-container {
+    background-color: red;
     display: flex;
+    margin-top: -110px;
     width: 100%;
-    height: 100px;
+    position: fixed;
 }
 
 .header-logo {
@@ -34,50 +36,26 @@ body{
     font-family:'Kolker Brush', cursive;
     margin-left: 50px;
     margin-top: 5px;
-    color: rgba(198, 0, 0, 0.719);
+    /*color: rgba(198, 0, 0, 0.719);*/
+    color:black;
 }
 
 .ver-carrito {
-    display: flex;
-    /*position: relative;
-    flex-direction: row;
-    margin-left:500px;
-    margin-top: 35px;
-}*/ 
-font-size: 30px;
-padding: 7px;
-top: 40px;
-right: 50px;
-position: absolute;
+    display: flex; 
+    font-size: 30px;
+    padding: 7px;
+    top: 40px;
+    right: 50px;
+    position: absolute;
 }
-
-
-/*
-.header-logo {
-    display: flex;
-
-}
-
-.nav-container .navBar-logo {
-    display: flex;
-    flex-direction: row;
-
-}
-*/
-
-
-
-
 
 /*product cards*/
 .shop-content {
     display:flex;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
     margin-top: 15vh;
-    /*margin-left: 80px;
-    margin-right: 80px;
-*/}
+}
 
 .card {
     background-color: white;
@@ -88,6 +66,7 @@ position: absolute;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 35px;
     margin: 5vh;
+    margin-top: 100px;
 }
 
 
@@ -110,7 +89,7 @@ position: absolute;
     outline: 0;
     padding: 12px;
     color: white;
-    background-color: #000;
+    background-color: red;
     text-align: center;
     cursor: pointer;
     width: 100%;
@@ -152,10 +131,6 @@ position: absolute;
     color: rgba(198, 0, 0, 0.719);
     width: 100%;
 }
-/*
-.modal-header-title {
-    justify-self: start;
-}*/
 
 .modal-header-button {
     cursor: pointer;
@@ -186,6 +161,7 @@ position: absolute;
 .footer {
     display: flex;
     justify-content: center;
+    color: #fff;
 }
 
 /*delete button product*/
